force-app/main/default/objects/RoundRobin__c/RoundRobin__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Utilizado para asignar agentes por Round Robin a las oportunidades</description>
    <label>RoundRobin</label>
</CustomObject>