force-app/main/default/objects/RoundRobin__c/fields/NextUser__c.field-meta.xml
<CustomField>
    <fullName>NextUser__c</fullName>
    <label>NextUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>