force-app/main/default/objects/RoundRobin__c/fields/Usuario_Activo__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Usuario Activo</label>
    <type>Checkbox</type>
</CustomField>